--- a/src/modal-template.html
+++ b/src/modal-template.html
@@ -1,6 +1,10 @@
  <ion-modal-view class="ionic-select-modal" ng-class="::ui.modalClass">
 
     <ion-header-bar ng-class="::ui.headerFooterClass">
+      <div class="buttons buttons-left header-item">
+            <button class="button button-icon button-clear ion-android-close"
+                    ng-click="closeModal()"></button>
+        </div>
       <h1 class="title">{{::ui.modalTitle}}</h1>
     </ion-header-bar>
 
@@ -50,10 +54,4 @@
         </div>
 
     </ion-content>
-
-    <ion-footer-bar ng-class="::ui.headerFooterClass">
-        <button type="button" class="button button-stable modal-select-close-button" ng-click="closeModal()">{{ui.cancelButton}}</button>
-        <button type="button" ng-if="::!ui.hideReset" class="button button-stable" ng-click="unsetValue()">{{ui.resetButton}}</button>
-    </ion-footer-bar>
-
 </ion-modal-view>
