--- a/src/modal-template.html
+++ b/src/modal-template.html
@@ -13,10 +13,10 @@
         <i class="icon ion-ios-search placeholder-icon"></i>
         <input type="search" placeholder="{{::ui.searchPlaceholder}}" ng-model="ui.searchValue">
       </label>
-      <button type="button" class="button button-clear btn-cancel" ng-click="clearSearch()" style="font-size: 14px;">
+      <button type="button" class="button button-clear btn-cancel" ng-click="clearSearch()" style="font-size: 14px !important;">
         {{ ui.cancelSearchButton }}
       </button>
-      <button type="button" ng-if="::!ui.hideReset" class="button button-clear btn-reset" ng-click="unsetValue()" style="position: absolute; right: -15px; font-size: 14px;">
+      <button type="button" ng-if="::!ui.hideReset" class="button button-clear btn-reset" ng-click="unsetValue()" style="position: absolute; right: -15px; top: -5px; font-size: 14px !important;">
         {{ ui.resetButton }}
       </button>
     </div>
