Header layout reset button updates

--- a/src/modal-template.html
+++ b/src/modal-template.html
@@ -16,7 +16,7 @@
       <button type="button" class="button button-clear btn-cancel" ng-click="clearSearch()" style="font-size: 14px !important; width: 100px !important; margin-left: 10px !important;">
         {{ ui.cancelSearchButton }}
       </button>
-      <button type="button" ng-if="::!ui.hideReset" class="button button-clear btn-reset" ng-click="unsetValue()" style="font-size: 14px !important; width: 75px !important; position: relative !important; margin-left: 0 !important;">
+      <button type="button" ng-if="::!ui.hideReset" class="button button-clear btn-reset" ng-click="unsetValue()" style="font-size: 14px !important; width: 75px !important; top: 0 !important; bottom: 0 !important; margin-left: 0 !important;">
         {{ ui.resetButton }}
       </button>
     </div>
